--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <style>
   .container {
     display: flex;
+    align-content: space-between;
   }
 
   .item {
@@ -19,7 +20,7 @@
     height: 300px;
     border: 5px solid goldenrod;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-wrap: column wrap;
   }
 </style>
@@ -37,6 +38,15 @@
     <div class="item">9</div>
     <div class="item">10</div>
   </div>
+
+  <form action="/quotes" method="POST">
+    <fieldset>
+      <h3>Enter quote please: </h3>
+      <input type="text" name="quote" placeholder="quote">
+      <input type="text" name="name" placeholder="name">
+      <input type="submit" value="Submit">
+    </fieldset>
+  </form>
 </body>
 
 </html>
